value api: reduce API by removing `ValueNode`
- we don't need it